<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@drawable/button"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:maxWidth="200dp"

            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"
        android:textColor="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edittourButton"
            android:background="@drawable/button"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/removetourButton"
            android:background="@drawable/button_red"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>