<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <LinearLayout
        android:background="@drawable/button"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Заказ №"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:maxWidth="200dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/itemUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:maxWidth="200dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/itemCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/white" />

</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>