<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:background="@color/red">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/countryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <EditText
            android:id="@+id/buyerName"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="125dp"
            android:hint="@string/name"
            />
        <Button
            android:id="@+id/buyButton"
            android:layout_margin="15dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/button_buy"
            android:text="@string/buy_this_tour"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>