<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@drawable/button"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/userLoginText"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:maxWidth="200dp"
            />
        <TextView
            android:id="@+id/userPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/password"
            android:textColor="@color/white"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editUserButton"
            android:background="@drawable/button"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/removeUserButton"
            android:background="@drawable/button_red"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>