<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_buy"
        >

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/icon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="75dp"
            android:layout_height="75dp"
            />
        <TextView
            android:id="@+id/welcomeText"
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/topPanel"
            app:layout_constraintBottom_toBottomOf="parent"

            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="630dp"
android:background="@color/red"
            >
            <EditText
                android:id="@+id/addTourTitle"
                android:hint="@string/tour_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/country"
                android:fontFamily="sans-serif-black"
                />
            <Spinner
                android:id="@+id/addTourSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <DatePicker
                android:id="@+id/addTourDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

            <EditText
                android:inputType="number"
                android:id="@+id/addTourPrice"
                android:hint="@string/tour_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/addTourButton"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/add_tour"
                android:fontFamily="sans-serif-black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_buy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/current_tours"
                android:fontFamily="sans-serif-black"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAdminTours"
                android:layout_gravity="center"
                android:background="@drawable/tours"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/users"
                android:fontFamily="sans-serif-black"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAdminUsers"
                android:layout_gravity="center"
                android:background="@drawable/tours"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>