<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditUserFragment"
    android:background="@color/red">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_buy"
        >

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="75dp"
            android:layout_height="75dp"
            />
        <TextView
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/editing_user"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red">

        <EditText
            android:id="@+id/editUserLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            />
        <EditText
            android:id="@+id/editUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />

        <Button
            android:id="@+id/saveUser"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/save"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_buy"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>