<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainClientFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/top_bar">

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/icon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <TextView
            android:id="@+id/welcomeText"
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Информация о клиенте -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="16dp">

        <TextView
            android:id="@+id/totalPurchasesText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Куплено туров: "
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/totalSpentText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Потрачено: "
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/discountLevelText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Уровень скидки:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Поиск по турам"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="220dp"
        />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"

        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_tours"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/boughtRecycler"
            android:padding="15dp"
            android:background="@drawable/tours"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCountries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button"
            android:text="По странам"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpenTours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_buy"
            android:text="@string/buy_new_tours"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>